--- a/nsb-site/src/index.css
+++ b/nsb-site/src/index.css
@@ -3,9 +3,13 @@
 @tailwind utilities;
 
 .card {
-  @apply bg-primary rounded-lg shadow-xl text-white p-4 sm:w-3/4;
+  @apply bg-primary rounded-lg shadow-xl text-white p-4;
+}
+
+h1 {
+  @apply text-3xl text-center;
 }
 
 h2 {
-  @apply text-lg font-bold;
+  @apply text-xl font-light;
 }
