--- a/nsb-site/src/index.css
+++ b/nsb-site/src/index.css
@@ -13,3 +13,7 @@ h1 {
 h2 {
   @apply text-xl font-light;
 }
+
+.navLink {
+  @apply hover:cursor-pointer hover:border-b-2 hover:border-primary mb-1;
+}
