fix laggy render of singles

--- a/nsb-site/src/index.css
+++ b/nsb-site/src/index.css
@@ -19,7 +19,7 @@ h2 {
 }
 
 .soMeIcon {
-  @apply hover:cursor-pointer stroke-white;
+  @apply hover:cursor-pointer hover:scale-105 stroke-white stroke-1;
 }
 
 p {
