--- a/nsb-site/src/index.css
+++ b/nsb-site/src/index.css
@@ -15,7 +15,7 @@ h2 {
 }
 
 .navLink {
-  @apply hover:cursor-pointer hover:border-b-2 hover:border-primary mb-1;
+  @apply hover:cursor-pointer hover:border-b-2 hover:border-primary mb-1 hover:text-gray-600 transition-all ease-in-out duration-200;
 }
 
 .soMeIcon {
