--- a/nsb-site/src/index.css
+++ b/nsb-site/src/index.css
@@ -15,7 +15,7 @@ h2 {
 }
 
 .navLink {
-  @apply hover:cursor-pointer hover:border-b-2 hover:border-primary hover:text-gray-600 transition-all ease-in-out duration-200 p-1;
+  @apply hover:cursor-pointer hover:border-b-2 hover:border-primary hover:text-primary transition-all ease-in-out duration-200 px-1 h-min mt-1;
 }
 
 .soMeIcon {
@@ -40,4 +40,8 @@ p {
 
 .mainContent {
   @apply px-2 lg:px-24 xl:px-40 2xl:px-72 grid gap-12 sm:gap-20 my-10;
+}
+
+.button {
+  @apply border border-primary rounded-full px-4 py-2 hover:bg-primary hover:text-white transition-all ease-in-out duration-200;
 }
