--- a/nsb-site/src/index.css
+++ b/nsb-site/src/index.css
@@ -43,5 +43,12 @@ p {
 }
 
 .button {
-  @apply border border-primary rounded-full px-4 py-2 hover:bg-primary hover:text-white transition-all ease-in-out duration-200;
+  @apply border border-primary rounded-full px-4 py-2 sm:hover:bg-primary sm:hover:text-white transition-all ease-in-out duration-200;
+}
+
+.member {
+  @apply text-center my-2;
+}
+.memberSection {
+  @apply grid gap-2 sm:gap-4 grid-cols-2 md:grid-cols-4 mb-8;
 }
