--- a/nsb-site/src/index.css
+++ b/nsb-site/src/index.css
@@ -42,7 +42,7 @@ p {
   @apply pt-24 px-2 lg:w-4/5 xl:w-[1000px] mx-auto pb-8;
 }
 
-.button {
+button {
   @apply border border-primary rounded-full px-4 py-2 sm:hover:bg-primary sm:hover:text-white transition-all ease-in-out duration-200;
 }
 
