--- a/nsb-site/src/index.css
+++ b/nsb-site/src/index.css
@@ -39,11 +39,14 @@ p {
 }
 
 .mainContent {
-  @apply pt-24 px-2 lg:w-4/5 xl:w-[1000px] mx-auto pb-8;
+  @apply pt-24 px-2 lg:w-4/5 xl:w-[1000px] mx-auto pb-8 min-h-screen;
 }
 
-button {
-  @apply border border-primary rounded-full px-4 py-2 sm:hover:bg-primary sm:hover:text-white transition-all ease-in-out duration-200;
+.btn1 {
+  @apply border border-primary w-max h-min rounded-full px-4 py-2 sm:hover:bg-primary sm:hover:text-white transition-all ease-in-out duration-200;
+}
+.btn2 {
+  @apply border border-primaryBg w-max h-min rounded-full px-4 py-2 sm:hover:bg-primaryBg sm:hover:text-primary transition-all ease-in-out duration-200;
 }
 
 .member {
@@ -51,9 +54,6 @@ button {
 }
 .memberSection {
   @apply grid gap-2 sm:gap-4 grid-cols-2 md:grid-cols-4 mb-8;
-}
-.primaryBg {
-  @apply bg-gray-100;
 }
 
 .placeholderAnimation {
