--- a/nsb-site/src/index.css
+++ b/nsb-site/src/index.css
@@ -14,6 +14,10 @@ h2 {
   @apply text-2xl font-extralight;
 }
 
+h3 {
+  @apply text-xl font-extralight;
+}
+
 .navLink {
   @apply hover:cursor-pointer hover:border-b-2 hover:border-primary hover:text-primary transition-all ease-in-out duration-200 px-1 h-min mt-1;
 }
@@ -43,10 +47,10 @@ p {
 }
 
 .btn1 {
-  @apply border border-primary w-max h-min rounded-full px-4 py-2 sm:hover:bg-primary sm:hover:text-white transition-all ease-in-out duration-200;
+  @apply border bg-gray-300 border-primary w-max h-min rounded-full px-8 py-2 sm:hover:bg-primary sm:hover:text-white transition-all ease-in-out duration-200;
 }
 .btn2 {
-  @apply border border-primaryBg w-max h-min rounded-full px-4 py-2 sm:hover:bg-primaryBg sm:hover:text-primary transition-all ease-in-out duration-200;
+  @apply border border-primaryBg w-max h-min rounded-full px-8 py-2 sm:hover:bg-primaryBg sm:hover:text-primary transition-all ease-in-out duration-200;
 }
 
 .member {
