update html tags and improve styling on home page

--- a/nsb-site/src/index.css
+++ b/nsb-site/src/index.css
@@ -47,7 +47,7 @@ p {
 }
 
 .btn1 {
-  @apply border bg-gray-300 border-primary w-max h-min rounded-full px-8 py-2 sm:hover:bg-primary sm:hover:text-white transition-all ease-in-out duration-200;
+  @apply border border-primary w-max h-min rounded-full px-8 py-2 sm:hover:bg-primary sm:hover:text-white transition-all ease-in-out duration-200;
 }
 .btn2 {
   @apply border border-primaryBg w-max h-min rounded-full px-8 py-2 sm:hover:bg-primaryBg sm:hover:text-primary transition-all ease-in-out duration-200;
