--- a/nsb-site/src/index.css
+++ b/nsb-site/src/index.css
@@ -18,6 +18,11 @@ h3 {
   @apply text-xl font-extralight;
 }
 
+input,
+textarea {
+  @apply rounded-lg p-2 w-full;
+}
+
 .navLink {
   @apply hover:cursor-pointer hover:border-b-2 hover:border-primary hover:text-primary transition-all ease-in-out duration-200 px-1 h-min mt-1;
 }
